@@ -360,6 +360,9 @@ private:
 
 	display& disp_;
 
+	/** Timer for updating the lobby. */
+	unsigned long lobby_update_timer_;
+
 	/** Wrapper for the preferences hotkey. */
 	boost::function<void()> preferences_wrapper_;
 };
